[package]
name = "tarantool-rpc"
authors = ["Chertov Maxim"]
repository = "https://github.com/chertov/tarantool-rpc"
license = "MIT OR Apache-2.0"
keywords = ["tarantool", "codegen", "rpc"]
version = "0.1.0"
edition = "2018"

[[example]]
name = "simple"
path = "examples/simple.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
codegen = []

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

linked-hash-map = { version = "0.5", features = ["serde_impl"] }
convert_case = "0.4"
