[package]
name = "tnt-app"
authors = ["Chertov Maxim"]
repository = "https://github.com/chertov/tarantool-rpc"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
once_cell = "1.9"

rand = "0.8"

tokio = { version = "1", features = ["time", "io-util", "rt-multi-thread"] }

tarantool = { version = "0.5.1", features = ["schema"] }

my-simple-rpc = { path = "../my-simple-rpc", features = ["tnt_impl"] }
my-custom-package = { path = "../my-custom-package" }

[build-dependencies]
anyhow = "1"
tarantool-rpc = { path = "../../" }
